cli_analysis_utf8.txt
node.exe : YOLO mode is enabled. All tool calls 
will be automatically approved.
In 
C:\Users\User01\AppData\Roaming\npm\gemini.ps1:24 
car:5
+     & "node$exe" --no-warnings=DEP0040 
"$basedir/node_modules/@google ...
+     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (YOLO  
   mode is en...cally approved.:String) [], Remot  
  eException
    + FullyQualifiedErrorId : NativeCommandError
 
Loaded cached credentials.
YOLO mode is enabled. All tool calls will be 
automatically approved.
C:\Users\User01\AppData\Roaming\npm\node_modules\@g
oogle\gemini-cli\node_modules\@lydell\node-pty\conp
ty_console_list_agent.js:11
var consoleProcessList = 
getConsoleProcessList(shellPid);
                         ^

Error: AttachConsole failed
    at Object.<anonymous> (C:\Users\User01\AppData\
Roaming\npm\node_modules\@google\gemini-cli\node_mo
dules\@lydell\node-pty\conpty_console_list_agent.js
:11:26)
    at Module._compile 
(node:internal/modules/cjs/loader:1761:14)
    at Object..js 
(node:internal/modules/cjs/loader:1893:10)
    at Module.load 
(node:internal/modules/cjs/loader:1481:32)
    at Module._load 
(node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync 
(node:diagnostics_channel:328:14)
    at wrapModuleLoad 
(node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] 
(node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.11.1
Ho analizzato i log forniti nel prompt e, notando che i log del backend erano troncati o mancanti dopo `LOG BACKEND: .`, ho autonomamente ispezionato i log fisici del tuo workspace (in `backend_python/backend_logs.txt`) per ricostruire il quadro completo della situazione.

Ecco l'analisi per **SYD Bioedilizia**:

### 1. Frontend: Analisi e Ottimizzazioni (Build Completata)
La build Next.js (che utilizza Turbopack) ├¿ andata a buon fine con ottime tempistiche.
*   **Tempi:** Compilazione completata in 26.6s, e generazione di 27 pagine statiche in 2.7s.
*   **Risorse:** Vengono utilizzati in maniera ottimale 7 worker per generare le rotte SSG (Static Site Generation).

**Bottleneck e Suggerimenti di ottimizzazione:**
*   **Prerendering delle Route Dinamiche:** Le route associate alla dashboard (es. `/dashboard/[id]`, `/dashboard/[id]/files`) sono marcate come dinamiche (`ãÆ` / server-rendered on demand). Se alcune di queste dashboard sono pubbliche o hanno ID noti, potresti valutarne l'esportazione con `generateStaticParams()` per ridurre il tempo di calcolo lato server.
*   **Package Imports:** Next.js sta usando `optimizePackageImports`. Accertati che i tuoi pacchetti icona (come `lucide-react` o `@radix-ui`) beneficino effettivamente di questa feature per alleggerire ulteriormente i bundle client inviati al browser.

---

### 2. Backend: Errori Critici e Bottleneck (Uvicorn / ADK)
Dai log estrapolati in `backend_logs.txt`, il fallimento della build (o l'arresto continuo del server) ├¿ dovuto ad una combinazione di **errori di sintassi** non sanati prima del deployment, accoppiati a **failure a runtime**.

**Errori Critici Identificati:**
1.  **Errore di Sintassi 1 (Docstring):**
    `SyntaxError: unterminated triple-quoted string literal (detected at line 113)` in `src/auth/jwt_handler.py` (riga 112). C'├¿ una docstring non chiusa correttamente che impedisce a Python di leggere il modulo.
2.  **Errore di Sintassi 2 (Blocco Try):**
    `SyntaxError: expected 'except' or 'finally' block` in `src/adk/adk_orchestrator.py` (riga 190). Il parser ha trovato un `except Exception as e:` ma la struttura del blocco `try` ├¿ malformata o incompleta.
3.  **Errore Runtime (Google ADK Session):**
    `SessionNotFoundError: Session not found: session-1768850441640-g0j47c` in `src/adk/adk_orchestrator.py` alla riga 152. L'orchestratore non riesce a trovare in memoria l'ID generato dall'`InMemorySessionService` quando l'utente tenta una richiesta di stream su `/chat/stream`.

**Bottleneck e Suggerimenti di ottimizzazione:**
*   **Pipeline CI/CD Carente:** Il fallimento fatale ("exit code 1") su banali errori di sintassi significa che manca un linter di controllo. **Ottimizzazione:** Aggiungi `ruff check .` e `ruff format --check` nella pipeline di build per catturare errori di formattazione ed eccezioni prima ancora del tentativo di esecuzione del codice Python.
*   **Gestione Graceful dell'ADK:** Quando `self.runner.run_async` genera un `SessionNotFoundError`, il server interrompe bruscamente lo stream. **Ottimizzazione:** Avvolgi la chiamata in un blocco `try/except` specifico. Se non trova la sessione in memoria (fenomeno comune se il server si ├¿ riavviato e stai usando `InMemorySessionService`), restituisci un codice di errore controllato (es. JSON con `{ "error_code": "SESSION_EXPIRED" }`) permettendo al frontend di forzare una reinizializzazione della chat in modo trasparente.

**Conclusione:** Il frontend ├¿ in perfetta salute. Per stabilizzare il backend devi risolvere tempestivamente le imprecisioni sintattiche su `jwt_handler.py` e `adk_orchestrator.py` e inserire un check di convalida formale prima di ogni build.
